--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
+<css>
+<style>
+   body 
+    {
+    font-family="monospace": ;
+    background-image: url(https://i.imgur.com/XQK1x7c.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    }
+</style>
+</css>
 
+<html>
+  <title>爛醉咖啡</title>
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <body>
+    <center>
+       </br>
+       <a href="https://chin-yan.github.io/web/"><button style="font-size:15px;" type="button" class="btn btn-sm btn-outline-secondary">首頁</button></a>&nbsp;&nbsp;&nbsp;&nbsp;
+
+      <a href="https://chin-yan.github.io/web-integration/"><button style="font-size:15px;" type="button" class="btn btn-sm btn-outline-secondary">回上一頁</button></a>&nbsp;&nbsp;&nbsp;&nbsp;
+       </br>
+     </br>
+      <table width="800" border="1" height="200">  
+  <tr><td>
+    <b>店名：爛醉咖啡</b>
+    <p><b>捷運：</b>台北市國父紀念館站</br>
+    <b>地址：</b>台北市大安區光復南路116巷9號</br>
+    <div><img src="https://i.imgur.com/KSF7W4Q.jpg" id="img1" width="400" hight="400">
+     
+    </br>
+    <b>餐點：</b></br>
+    ❣️微笑脆薯與松露起司醬$220</br>
+    cp值：🌕🌕🌕🌕🌑</br>
+    是屬於比較細的薯條 但口感不會過硬 脆度剛好</br>單吃或沾醬吃都很涮嘴 分量很多 適合2-3人享用</br>
+    ❣️美式檸檬風味吮指炸雞$250</br>
+    cp值：🌕🌕🌕🌕🌗</br>
+    是無骨炸雞塊 吃起來很酥脆 肉質很鮮嫩</br>單吃或沾檸檬醃醬都很好吃 不容易膩 適合2-3人享用
+    ❣️粉紅泳池(玫瑰奶綠)$200</br>
+    cp值：🌕🌕🌕🌑🌑</br>
+    飲料體是有漸層的粉色 上面有一片薄荷葉 不過喝起來有點失望</br>稍微普通了點 甜度像微糖沒有很甜 份量小! 
+    ❣️紅茶歐雷$180</br>
+    cp值：🌕🌕🌕🌑🌑</br>
+    口感跟外面的鮮奶茶沒什麼差別 份量小 我覺得稍微貴了點~</br>
+    </br>
+    <b>環境：</b><br>
+    很適合愛聊天 拍照的人！</br>
+    店內相當空曠舒適 人滿滿也沒有感覺吵雜 而店風格是異國度假風 每個角落都拍照美美的</br>
+    營業設定是上下午為咖啡廳 晚上為餐酒館 會想再回訪~</br>
+    </br>
+    有無抵銷：有 每個人$400 酌收10%服務費</br> 
+    時間限制：2小時</br>
+    </br>
+    適合聊天🌕🌕🌕🌕🌕</br>
+    適合讀書🌑🌑🌑🌑🌑</br>
+    整體評價🌕🌕🌕🌗🌑</br>
+    </p>
+    </td></tr></table>
+    </center>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    </body>
+ </html>
