--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
      </br>
       <table width="800" border="1" height="200">  
   <tr><td>
-    <b>店名：爛醉咖啡</b>
+    <b>店名：</b>爛醉咖啡<br>
     <p><b>捷運：</b>台北市國父紀念館站</br>
     <b>地址：</b>台北市大安區光復南路116巷9號</br>
     <div><img src="https://i.imgur.com/KSF7W4Q.jpg" id="img1" width="400" hight="400">
